--- a/client/package.json
+++ b/client/package.json
@@ -13,9 +13,10 @@
     "axios": "^1.7.7",
     "js-cookie": "^3.0.5",
     "pannellum-react": "^1.2.4",
-    "react": "^16.8",
-    "react-dom": "^16.8",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
+    "react-vr": "^2.0.0",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
