--- a/client/vercel.json
+++ b/client/vercel.json
@@ -4,5 +4,8 @@
             "source": "/(.*)",
             "destination": "/"
         }
-    ]
+    ],
+    "build": {
+        "command": "npm install --legacy-peer-deps && next build"
+    }
 }
